--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -1,200 +1,167 @@
-## mako
+## ========= FOOTER (Mako, Indigo-compatible) =========
 <%page expression_filter="h"/>
 <%!
   from datetime import datetime
-  from django.urls import reverse
   from django.utils.translation import gettext as _
   from lms.djangoapps.branding.api import get_footer
   from openedx.core.djangoapps.lang_pref.api import footer_language_selector_is_enabled
 %>
-<% footer = get_footer(is_secure=is_secure) %>
-<% icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {})%>
 <%namespace name='static' file='static_content.html'/>
-<!-- NEW IN Mytheme update footer -->
+<% footer = get_footer(is_secure=is_secure) %>
+<% icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {}) %>
+
 % if uses_bootstrap:
 <div class="wrapper wrapper-footer">
   <footer id="footer" class="tutor-container"
-    ## When rendering the footer through the branding API,
-    ## the direction may not be set on the parent element,
-    ## so we set it here.
     % if bidi:
       dir=${bidi}
     % endif
-  >
-  <div class="footer-top">
-    <div class="powered-area">
-      ## Please leave this link and use one of the logos provided
-      ## The OpenEdX link may be hidden when this view is served
-      ## through an API to partner sites (such as marketing sites or blogs),
-      ## which are not technically powered by OpenEdX.
-      % if not hide_openedx_link:
-      <ul class="logo-list">
-        <li>Powered by:</li>
-        <li>
-          <a href="https://docs.tutor.edly.io" rel="noopener" target="_blank">
-            <img src="${static.url('images/tutor-logo.png')}" alt="Runs on Tutor" width="80" />
-          </a>
-        </li>
-        <li>
-          <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
-            <img src="${static.url('images/openedx-logo.png')}" alt="${footer['openedx_link']['title']}" width="79" />
-          </a>
-        </li>
-      </ul>
-    </div>
-    
-    <nav class="nav-colophon" style="background-color: blueviolet;" aria-label="${_('About')}">
-      <ol>
-          
-          <li>
-            <a href="/about">About Us</a>
-          </li>
-          
-          <li>
-            <a href="/blog">Blog</a>
-          </li>
-          
-          <li>
-            <a href="/donate">Donate</a>
-          </li>
-          
-          <li>
-            <a href="/tos">Terms of Service</a>
-          </li>
-          
-          <li>
-            <a href="/privacy">Privacy Policy</a>
-          </li>
-          
-          <li>
-            <a href="/help">Help</a>
-          </li>
-          
-          <li>
-            <a href="/contact">Contact Us</a>
-          </li>
-          
-      </ol>
-    </nav>
-    
-  </div>
-  <span class="copyright-site">Copyrights ©${datetime.now().year}. All Rights Reserved.</span>
-  % endif
-    <div class="colophon">
-
-      % if context.get('include_language_selector', footer_language_selector_is_enabled()):
-          <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
-      % endif
-
-      ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-        <p class="copyright">${footer['copyright']}
-            % if icp_license_info.get('icp_license'):
-              ${u" | {text}".format(text=icp_license_info.get('text'))}
-              <a href="${icp_license_info.get('icp_license_link', '#')}">
-                  ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
-              </a>
-            % endif
-        </p>
-    </div>
-  </footer>
-</div>
-% else:
-<!-- NEW IN Mytheme update footer -->
-  <div class="wrapper wrapper-footer">
-    <footer id="footer" class="tutor-container"
-      ## When rendering the footer through the branding API,
-      ## the direction may not be set on the parent element,
-      ## so we set it here.
-      % if bidi:
-        dir=${bidi}
-      % endif
-    >
+  > 
     <div class="footer-top">
       <div class="powered-area">
-        ## Please leave this link and use one of the logos provided
-        ## The OpenEdX link may be hidden when this view is served
-        ## through an API to partner sites (such as marketing sites or blogs),
-        ## which are not technically powered by OpenEdX.
         % if not hide_openedx_link:
         <ul class="logo-list">
-          <li>Powered by:</li>
+          <li>${_('Powered by:')}</li>
           <li>
             <a href="https://docs.tutor.edly.io" rel="noopener" target="_blank">
-              <img src="${static.url('images/tutor-logo.png')}" alt="Runs on Tutor" width="80" />
+              <img src="${static.url('images/tutor-logo.png')}" alt="${_('Runs on Tutor')}" width="80"/>
             </a>
           </li>
           <li>
             <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
-              <img src="${static.url('images/openedx-logo.png')}" alt="${footer['openedx_link']['title']}" width="79" />
+              <img src="${static.url('images/openedx-logo.png')}" alt="${footer['openedx_link']['title']}" width="79"/>
             </a>
           </li>
         </ul>
-      </div>
-      
-      <nav class="nav-colophon" style="background-color: red;" aria-label="${_('About')}">
-        <ol>
-            
-            <li>
-              <a href="/about">About Us</a>
-            </li>
-            
-            <li>
-              <a href="/blog">Blog</a>
-            </li>
-            
-            <li>
-              <a href="/donate">Donate</a>
-            </li>
-            
-            <li>
-              <a href="/tos">Terms of Service</a>
-            </li>
-            
-            <li>
-              <a href="/privacy">Privacy Policy</a>
-            </li>
-            
-            <li>
-              <a href="/help">Help</a>
-            </li>
-            
-            <li>
-              <a href="/contact">Contact Us</a>
-            </li>
-            
-        </ol>
-      </nav>
-      
-    </div>
-    <span class="copyright-site">Copyrights ©${datetime.now().year}. All Rights Reserved.</span>
-    % endif
-      <div class="colophon">
-
-        % if context.get('include_language_selector', footer_language_selector_is_enabled()):
-            <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
         % endif
-
-        ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-          <p class="copyright">${footer['copyright']}
-              % if icp_license_info.get('icp_license'):
-                ${u" | {text}".format(text=icp_license_info.get('text'))}
-                <a href="${icp_license_info.get('icp_license_link', '#')}">
-                    ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
-                </a>
-              % endif
-          </p>
       </div>
-    </footer>
-  </div>
+
+      ## ---- Custom grid (ported from index.html) ----
+      <div class="footer-grid" style="max-width:1200px;margin:2rem auto 0;display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('About CUSC')}</h4>
+          <p>
+            ${_('The Can Tho University Software Center provides online learning solutions and professional courses in programming, data science, and design.')}
+          </p>
+        </div>
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('Quick Links')}</h4>
+          <a href="/courses">${_('Courses')}</a>
+          <a href="/about">${_('About')}</a>
+          <a href="/tos">${_('Terms')}</a>
+          <a href="/privacy">${_('Privacy')}</a>
+        </div>
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('Contact')}</h4>
+          <p>Email: info@cusc.vn</p>
+          <p>Phone: +84 292 3835 579</p>
+          <p>Address: 1 Ly Tu Trong St, Ninh Kieu, Can Tho, Vietnam</p>
+        </div>
+      </div>
+      ## ----------------------------------------------
+    </div>
+
+    <span class="copyright-site">Copyrights ©${datetime.now().year}. ${_('All Rights Reserved.')}</span>
+
+    <div class="colophon" style="margin-top:1rem;">
+      % if context.get('include_language_selector', footer_language_selector_is_enabled()):
+        <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
+      % endif
+
+      <p class="copyright">
+        ${footer['copyright']}
+        % if icp_license_info.get('icp_license'):
+          ${u" | {text}".format(text=icp_license_info.get('text'))}
+          <a href="${icp_license_info.get('icp_license_link', '#')}">
+            ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
+          </a>
+        % endif
+      </p>
+    </div>
+  </footer>
+</div>
+% else:
+<div class="wrapper wrapper-footer">
+  <footer id="footer" class="tutor-container"
+    % if bidi:
+      dir=${bidi}
+    % endif
+  >
+    <div class="footer-top">
+      <div class="powered-area">
+        % if not hide_openedx_link:
+        <ul class="logo-list">
+          <li>${_('Powered by:')}</li>
+          <li>
+            <a href="https://docs.tutor.edly.io" rel="noopener" target="_blank">
+              <img src="${static.url('images/cusc-logo.png')}" alt="${_('Runs on Tutor')}" width="80"/>
+            </a>
+          </li>
+          <li>
+            <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
+              <img src="${static.url('images/ctu-logo.png')}" alt="${footer['openedx_link']['title']}" width="79"/>
+            </a>
+          </li>
+        </ul>
+        % endif
+      </div>
+
+      ## ---- Custom grid (ported from index.html) ----
+      <div class="footer-grid" style="max-width:1200px;margin:2rem auto 0;display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('About CUSC')}</h4>
+          <p>
+            ${_('The Can Tho University Software Center provides online learning solutions and professional courses in programming, data science, and design.')}
+          </p>
+        </div>
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('Quick Links')}</h4>
+          <a href="/courses">${_('Courses')}</a>
+          <a href="/about">${_('About')}</a>
+          <a href="/tos">${_('Terms')}</a>
+          <a href="/privacy">${_('Privacy')}</a>
+        </div>
+        <div class="footer-col">
+          <h4 style="margin:0 0 1rem 0;">${_('Contact')}</h4>
+          <p>Email: info@cusc.vn</p>
+          <p>Phone: +84 292 3835 579</p>
+          <p>Address: 1 Ly Tu Trong St, Ninh Kieu, Can Tho, Vietnam</p>
+        </div>
+      </div>
+      ## ----------------------------------------------
+    </div>
+
+    <span class="copyright-site">Copyrights ©${datetime.now().year}. ${_('All Rights Reserved.')}</span>
+
+    <div class="colophon" style="margin-top:1rem;">
+      % if context.get('include_language_selector', footer_language_selector_is_enabled()):
+        <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
+      % endif
+
+      <p class="copyright">
+        ${footer['copyright']}
+        % if icp_license_info.get('icp_license'):
+          ${u" | {text}".format(text=icp_license_info.get('text'))}
+          <a href="${icp_license_info.get('icp_license_link', '#')}">
+            ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
+          </a>
+        % endif
+      </p>
+    </div>
+  </footer>
+</div>
 % endif
+
 % if include_dependencies:
   <%static:js group='base_vendor'/>
   <%static:css group='style-vendor'/>
-  <%include file="widgets/segment-io.html" />
-  <%include file="widgets/segment-io-footer.html" />
+  <%include file="widgets/segment-io.html"/>
+  <%include file="widgets/segment-io-footer.html"/>
 % endif
+
 % if footer_css_urls:
   % for url in footer_css_urls:
-    <link rel="stylesheet" type="text/css" href="${url}"></link>
+    <link rel="stylesheet" type="text/css" href="${url}"/>
   % endfor
 % endif
+## ========= /FOOTER =========
