--- a/lms/templates/header/header.html
+++ b/lms/templates/header/header.html
@@ -108,7 +108,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
                         <option value="${language[0]}" >${language[1]}</option>
                     % endif
                 % endfor
-            </select>
+            </select>x
             </label>
         </form>
     % endif
