--- a/lms/templates/header/navbar-not-authenticated.html
+++ b/lms/templates/header/navbar-not-authenticated.html
@@ -1,60 +1,41 @@
 ## mako
-
 <%page expression_filter="h"/>
-
 <%namespace name='static' file='../static_content.html'/>
 <%namespace file='../main.html' import="login_query"/>
-
 <%!
 from django.conf import settings
-from django.urls import reverse
 from django.utils.translation import gettext as _
 %>
 
 <%
-  mktg_site_enabled = static.get_value('ENABLE_MKTG_SITE', settings.FEATURES.get('ENABLE_MKTG_SITE', False))
-  courses_are_browsable = settings.FEATURES.get('COURSES_ARE_BROWSABLE')
   allows_login = not settings.FEATURES['DISABLE_LOGIN_BUTTON'] and not combined_login_and_register
-  can_discover_courses = settings.FEATURES.get('ENABLE_COURSE_DISCOVERY')
-  allow_public_account_creation = static.get_value('ALLOW_PUBLIC_ACCOUNT_CREATION', settings.FEATURES.get('ALLOW_PUBLIC_ACCOUNT_CREATION')) and settings.FEATURES.get('SHOW_REGISTRATION_LINKS', True)
+  allow_public_account_creation = static.get_value(
+      'ALLOW_PUBLIC_ACCOUNT_CREATION',
+      settings.FEATURES.get('ALLOW_PUBLIC_ACCOUNT_CREATION')
+  ) and settings.FEATURES.get('SHOW_REGISTRATION_LINKS', True)
 %>
-<!-- NEW IN INDIGO update nav -->
-<nav class="nav-links" aria-label=${_("Supplemental Links")}>
-  <div class="main">
-  % if mktg_site_enabled:
-    <div class="mobile-nav-item hidden-mobile nav-item">
-      <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
-    </div>
-    % if courses_are_browsable:
-      <div class="mobile-nav-item hidden-mobile nav-item">
-        <a href="${marketing_link('COURSES')}">${_("Courses")}</a>
-      </div>
-    % endif
-    <div class="mobile-nav-item hidden-mobile nav-item">
-      <a href="${marketing_link('SCHOOLS')}">${_("Schools")}</a>
-    </div>
-  % endif
+
+<nav class="nav-right" aria-label=${_("Account actions")}>
+  <%include file="./theme-toggle-button.html" />
+
   % if allows_login:
-    % if can_discover_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
-        <a href="/courses">${_('Discover courses')}</a>
-      </div>
-    %endif
+    % if allow_public_account_creation and not disable_register_button:
+      <a class="btn-auth btn-register" href="/register${login_query()}">
+        <!-- user-plus svg -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 24 24">
+          <path fill="currentColor" d="M15 14c2.67 0 8 1.34 8 4v3h-8v-3c0-2.66-4.67-4-7-4s-7 1.34-7 4v3H1v-3c0-3.31 5.33-6 12-6zM12 12a4 4 0 1 0 0-8a4 4 0 0 0 0 8zm9-1V9h-2V7h-2v2h-2v2h2v2h2v-2h2z"/>
+        </svg>
+
+        <span>${_("Register for Free")}</span>
+      </a>
+    % endif
+
+    <a class="btn-auth btn-signin" href="/login${login_query()}">
+      <!-- user svg -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" aria-hidden="true">
+        <path fill="currentColor" d="M12 12a5 5 0 1 0-5-5a5 5 0 0 0 5 5m0 2c-3.33 0-10 1.34-10 4v2h20v-2c0-2.66-6.67-4-10-4"/>
+      </svg>
+      <span>${_("Sign In")}</span>
+    </a>
   % endif
-  </div>
-  <div class="secondary d-flex align-items-center">
-    <%include file="./theme-toggle-button.html" />
-    <div class="btn-holder">
-      % if allows_login:
-        % if allow_public_account_creation and not disable_register_button:
-            <div class="mobile-nav-item hidden-mobile nav-item">
-                <a class="register-btn btn" href="/register${login_query()}">${_("Register for free")}</a>
-            </div>
-        % endif
-        <div class="mobile-nav-item hidden-mobile nav-item">
-            <a class="sign-in-btn btn" href="/login${login_query()}">${_("Sign in")}</a>
-        </div>
-      % endif
-    </div>
-  </div>
 </nav>
