--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1707,9 +1707,10 @@ body.indigo-dark-theme {
     }
   }
 }
-
 @import '../../../extra/footer';
 @import '../../../extra/header';
+@import '../../../extra/help';
+@import '../../../extra/privacy';
 @import '../../../dashboard/dashboard';
 @import '../../../courseware/discover';
 @import '../../../courseware/about';
