--- a/lms/templates/static_templates/help.html
+++ b/lms/templates/static_templates/help.html
@@ -4,19 +4,65 @@
 <%inherit file="../main.html" />
 
 <%block name="pagetitle">${_("Help")}</%block>
+<%!
+import json
+from urllib.parse import urljoin
 
+from django.conf import settings
+from django.urls import reverse
+from django.utils.translation import gettext as _
+
+from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_image_urls_for_user
+from openedx.features.enterprise_support.utils import get_enterprise_learner_generic_name, get_enterprise_learner_portal
+%>
+
+<%
+## This template should not use the target student's details when masquerading, see TNL-4895
+self.real_user = getattr(user, 'real_user', user)
+profile_image_url = get_profile_image_urls_for_user(self.real_user)['medium']
+username = self.real_user.username
+displayname = get_enterprise_learner_generic_name(request) or username
+enterprise_customer_portal = get_enterprise_learner_portal(request)
+## Enterprises with the learner portal enabled should not show order history, as it does
+## not apply to the learner's method of purchasing content.
+should_show_order_history = not enterprise_customer_portal
+%>
 <main id="main" aria-label="Content" tabindex="-1">
-    <section class="container about">
-        <h1>
-            <%block name="pageheader">${page_header or _("Help")}</%block>
-        </h1>
-        <p>
-            <%block name="pagecontent">${page_content or _("This page left intentionally blank. Feel free to add your own content.")}</%block>
-        </p>
-        <!-- NEW IN INDIGO: add graphic image -->
-        <div class="graphic-img">
-            <img src="${static.url('images/help.svg')}" alt="Runs on Tutor" />
-            <img class="dark" src="${static.url('images/help-dark.svg')}" alt="Runs on Tutor" />
+    <section class="container about help-page">
+        <div class="help-hero">
+            <div class="hero-text">
+                <h1>
+                    <%block name="pageheader">${page_header or _("Need Help?")}</%block>
+                </h1>
+                <p class="lead">
+                    <%block name="pagecontent">${page_content or _("We’re here to guide you. Find quick answers, tutorials, and contact support below.")}</%block>
+                </p>
+                <div class="help-buttons">
+                    <a href="/contact" class="btn primary">Contact Support</a>
+                </div>
+            </div>
+            <div class="hero-graphic">
+                <img src="${static.url('images/help.svg')}" alt="Help illustration" />
+                <img class="dark" src="${static.url('images/help-dark.svg')}" alt="Help illustration dark" />
+            </div>
+        </div>
+
+        <div class="help-sections">
+            <div class="help-card">
+                <h3>📘 Getting Started</h3>
+                <p>Learn how to enroll in courses, access content, and track your learning progress.</p>
+                <a href="/courses" class="link">Learn more →</a>
+            </div>
+            <div class="help-card">
+                <h3>🔐 Account & Login</h3>
+                <p>Having trouble signing in? Reset your password or update your profile information here.</p>
+                <a href="${urljoin(settings.PROFILE_MICROFRONTEND_URL, f'{user.username}')}" class="link">View help →</a>
+            </div>
+            <div class="help-card">
+                <h3>🎓 Courses & Certificates</h3>
+                <p>Understand how to access course materials and download your completion certificates.</p>
+                <a href="/dashboard" class="link">Explore →</a>
+            </div>
         </div>
     </section>
 </main>
